@@ -102,6 +102,39 @@ RcppExport SEXP _RcppSpdlog_log_setup(SEXP nameSEXP, SEXP levelSEXP) {
     UNPROTECT(1);
     return rcpp_result_gen;
 }
+// log_init
+void log_init(const std::string& level);
+static SEXP _RcppSpdlog_log_init_try(SEXP levelSEXP) {
+BEGIN_RCPP
+    Rcpp::traits::input_parameter< const std::string& >::type level(levelSEXP);
+    log_init(level);
+    return R_NilValue;
+END_RCPP_RETURN_ERROR
+}
+RcppExport SEXP _RcppSpdlog_log_init(SEXP levelSEXP) {
+    SEXP rcpp_result_gen;
+    {
+        Rcpp::RNGScope rcpp_rngScope_gen;
+        rcpp_result_gen = PROTECT(_RcppSpdlog_log_init_try(levelSEXP));
+    }
+    Rboolean rcpp_isInterrupt_gen = Rf_inherits(rcpp_result_gen, "interrupted-error");
+    if (rcpp_isInterrupt_gen) {
+        UNPROTECT(1);
+        Rf_onintr();
+    }
+    bool rcpp_isLongjump_gen = Rcpp::internal::isLongjumpSentinel(rcpp_result_gen);
+    if (rcpp_isLongjump_gen) {
+        Rcpp::internal::resumeJump(rcpp_result_gen);
+    }
+    Rboolean rcpp_isError_gen = Rf_inherits(rcpp_result_gen, "try-error");
+    if (rcpp_isError_gen) {
+        SEXP rcpp_msgSEXP_gen = Rf_asChar(rcpp_result_gen);
+        UNPROTECT(1);
+        Rf_error(CHAR(rcpp_msgSEXP_gen));
+    }
+    UNPROTECT(1);
+    return rcpp_result_gen;
+}
 // log_filesetup
 void log_filesetup(const std::string& filename, const std::string& name, const std::string& level);
 static SEXP _RcppSpdlog_log_filesetup_try(SEXP filenameSEXP, SEXP nameSEXP, SEXP levelSEXP) {
@@ -542,6 +575,7 @@ static int _RcppSpdlog_RcppExport_validate(const char* sig) {
     if (signatures.empty()) {
         signatures.insert("std::string(*formatter)(const std::string,std::vector<std::string>)");
         signatures.insert("void(*log_setup)(const std::string&,const std::string&)");
+        signatures.insert("void(*log_init)(const std::string&)");
         signatures.insert("void(*log_filesetup)(const std::string&,const std::string&,const std::string&)");
         signatures.insert("void(*log_drop)(const std::string&)");
         signatures.insert("void(*log_set_pattern)(const std::string&)");
@@ -563,6 +597,7 @@ static int _RcppSpdlog_RcppExport_validate(const char* sig) {
 RcppExport SEXP _RcppSpdlog_RcppExport_registerCCallable() { 
     R_RegisterCCallable("RcppSpdlog", "_RcppSpdlog_formatter", (DL_FUNC)_RcppSpdlog_formatter_try);
     R_RegisterCCallable("RcppSpdlog", "_RcppSpdlog_log_setup", (DL_FUNC)_RcppSpdlog_log_setup_try);
+    R_RegisterCCallable("RcppSpdlog", "_RcppSpdlog_log_init", (DL_FUNC)_RcppSpdlog_log_init_try);
     R_RegisterCCallable("RcppSpdlog", "_RcppSpdlog_log_filesetup", (DL_FUNC)_RcppSpdlog_log_filesetup_try);
     R_RegisterCCallable("RcppSpdlog", "_RcppSpdlog_log_drop", (DL_FUNC)_RcppSpdlog_log_drop_try);
     R_RegisterCCallable("RcppSpdlog", "_RcppSpdlog_log_set_pattern", (DL_FUNC)_RcppSpdlog_log_set_pattern_try);
@@ -585,6 +620,7 @@ static const R_CallMethodDef CallEntries[] = {
     {"_RcppSpdlog_setLogLevel", (DL_FUNC) &_RcppSpdlog_setLogLevel, 1},
     {"_RcppSpdlog_formatter", (DL_FUNC) &_RcppSpdlog_formatter, 2},
     {"_RcppSpdlog_log_setup", (DL_FUNC) &_RcppSpdlog_log_setup, 2},
+    {"_RcppSpdlog_log_init", (DL_FUNC) &_RcppSpdlog_log_init, 1},
     {"_RcppSpdlog_log_filesetup", (DL_FUNC) &_RcppSpdlog_log_filesetup, 3},
     {"_RcppSpdlog_log_drop", (DL_FUNC) &_RcppSpdlog_log_drop, 1},
     {"_RcppSpdlog_log_set_pattern", (DL_FUNC) &_RcppSpdlog_log_set_pattern, 1},
